# SailMAV_ROS_RPI

./: .gitmodules  README.md  build.bash  build.sh  record.bash  run.bash  run.sh  run_local.bash  run_remote.bash
camera_ros/: CMakeLists.txt  Camera.cpp  Camera.h  Utils.cpp  Utils.h  main.cpp
